terraform_ec2_linux/setup.tf
provider "aws" {
    region = var.region
    access_key = var.access_key
    secret_key = var.secret_key
}

#Create key-pair for logging into EC2 in us-east-1
resource "aws_key_pair" "webserver-key" {
    key_name   = "webserver-key"
    public_key = file("~/.ssh/id_rsa.pub")
}


#Get Linux AMI ID using SSM Parameter endpoint in us-east-1
#data "aws_ssm_parameter" "webserver-ami" {
#    name = "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
#}

#Create VPC in us-east-1
resource "aws_vpc" "vpc" {
    cidr_block           = "10.0.0.0/16"
    enable_dns_support   = true
    enable_dns_hostnames = true
    tags = {
        Name = "terraform-vpc"
    }

}

#Create IGW in us-east-1
resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.vpc.id
}

#Get main route table to modify
data "aws_route_table" "main_route_table" {
    filter {
        name   = "association.main"
        values = ["true"]
    }
    filter {
        name   = "vpc-id"
        values = [aws_vpc.vpc.id]
    }
}

#Create route table in us-east-1
resource "aws_default_route_table" "internet_route" {
    default_route_table_id = data.aws_route_table.main_route_table.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
    }
    tags = {
        Name = "Terraform-RouteTable"
    }
}

#Get all available AZ's in VPC for master region
data "aws_availability_zones" "azs" {
    state = "available"
}

#Create subnet # 1 in us-east-1
resource "aws_subnet" "subnet" {
    availability_zone = element(data.aws_availability_zones.azs.names, 0)
    vpc_id            = aws_vpc.vpc.id
    cidr_block        = "10.0.1.0/24"
}


#Create SG for allowing TCP/80 & TCP/22
resource "aws_security_group" "sg" {
    name        = "sg"
    description = "Allow TCP/80 & TCP/22"
    vpc_id      = aws_vpc.vpc.id
    ingress {
        description = "Allow SSH traffic"
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        description = "allow traffic from TCP/80"
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}

output "Webserver-Public-IP" {
    value = aws_instance.webserver.public_ip
}
